fixes - add endpoint to approve a quotation
